changed navbar to no longer collapse when window gets too small

--- a/contents/css/Dashboard.css
+++ b/contents/css/Dashboard.css
@@ -36,6 +36,11 @@
     height: 5px;
 }
 
+.nav-padding {
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
 /* Body styling */
 .title {
     color: #E5836A;
